# ProtonDriveTux

./: .gitignore  .gitmodules  CLAUDE.md  ISSUES.md  PLAN.md  README.md  SYNC_TODOS.md  cargo.toml  index.html  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/superpowers/plans/: 2026-05-24-frontend-security.md  2026-05-24-rust-refactor.md  2026-05-24-sync-ts-refactor.md  2026-05-24-test-suite-improvement.md  2026-05-25-auth-hook-completion.md  2026-05-26-parallel-sync.md
docs/superpowers/specs/: 2026-05-24-test-suite-improvement-design.md  2026-05-25-auth-hook-completion-design.md  2026-05-26-parallel-sync-design.md  sync-level2-design.md
src/: App.css  App.tsx  global.d.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  commands.rs  db.rs  keyring.rs  lib.rs  watcher.rs
src-tauri/src/commands/: auth.rs  config.rs  db.rs  file.rs  guards.rs  mod.rs  ui.rs  watcher.rs
src/__tests__/: concurrency.test.ts  conflictResolution.test.ts  folderTree.test.ts  i18n.test.ts  reconciliation.test.ts  sync.test.ts  syncDecisions.test.ts  syncHandlers.test.ts  syncState.test.ts  useAuth.test.ts
src/__tests__/helpers/: syncMocks.ts
src/components/: CaptchaWaitingFrame.tsx  ConflictWizard.tsx  Dashboard.tsx  FolderTree.tsx  LoginForm.tsx  LoginFrame.tsx  MailboxPwdForm.tsx  Onboarding.tsx  SmokeTest.tsx  TotpForm.tsx  TrayPopup.tsx  UnlockForm.tsx  UnlockFrame.tsx
src/hooks/: useAuth.ts  useFileStates.ts  useHumanVerification.ts  useSyncStatus.ts  useTauriEventListener.ts
src/lib/: accountProvider.ts  auth.ts  authContext.tsx  config.ts  conflictHelpers.ts  cryptoModule.ts  drive.ts  folderTreeHelpers.ts  httpClient.ts  i18n.tsx  ipcApi.ts  paths.ts  session.ts  srpModule.ts  sync.ts  syncDecisions.ts  syncHelpers.ts  tauriFetch.ts  theme.tsx  translations.ts
src/lib/sync/: concurrency.ts  config.ts  index.ts  local-to-remote.ts  reconciliation.ts  remote-to-local.ts  state.ts
src/types/: auth.ts  logging.ts  sync.ts
