[package]
name = "src-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "src_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
notify = "6"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
base64 = "0.22"
secret-service = { version = "5", features = ["crypto-rust"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
notify-rust = "4"

